[project]
name = "gaming-rag-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.4",
    "openai>=1.73.0",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.5.4",
]
